--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,8 @@ background-image: url("https://www.magicmurals.com/tools/phpThumb/phpThumb.php?s
   margin-left: 10%;
 }
 
+p {
+display: inline;
+
+}
+
