--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
+  font-family: 'BioRhyme', serif;
 }
 
 header {
@@ -21,6 +22,9 @@ header h1 {
 
 header nav {
   float: right;
+  padding: 10px;
+  margin: 10px 20px 0 0;
+
 }
 
 nav ul {
@@ -29,7 +33,7 @@ nav ul {
 nav li {
   display: inline-block;
   padding: 10px;
-  border: 1px solid white;
+  border-radius: 5px;
   background-color: red;
 }
 
@@ -50,18 +54,26 @@ background-color: lightgrey;
 overflow: auto;
 text-align: center;
 background-image: url("https://www.magicmurals.com/tools/phpThumb/phpThumb.php?src=/media/catalog/product/F/O/FOT-0039334170_1.jpg&fltr%5B%5D=wmi%7CwatermarkMM2.png%7CB");
-
+background-size: cover;
+/*background-repeat: no-repeat;*/
 /*background-image: url("");*/
 }
 
 .three_pies h2{
   display: block;
   clear: both;
-  background-color: black;
+  background-color: rgba(25, 24, 26, .7);
   color: white;
+  width: 300px;
+  margin-left: 8%;
+  box-shadow: 2px 2px 2px black;
+  padding: 10px;
+  margin-top: 30px;
+  border-radius: 10px;
+  border: 1px solid white;
 }
 .pies {
-  margin-top: 5%;
+  margin-top: 3%;
   margin-left: 35px;
   width: 400px;
   height: 400px;
@@ -80,7 +92,7 @@ background-image: url("https://www.magicmurals.com/tools/phpThumb/phpThumb.php?s
 }
 
 #medium_pie {
-  margin: 30px 20px 10px 25px;
+  margin: 30px 20px 10px 80px;
   width: 300px;
   height: 300px;
   border: 10px solid black;
@@ -104,13 +116,45 @@ background-image: url("https://www.magicmurals.com/tools/phpThumb/phpThumb.php?s
   float: left;
   overflow: auto;
   margin-left: 10%;
+  padding-bottom: 20px;
 }
 
 p {
 display: inline;
+}
 
+#small_p {
+  margin-left: -7px;
+  margin-top: -10px;
+}
+
+#medium_p {
+  margin-top: -13px;
+  margin-left: -10px;
+}
+
+#large_p {
+  margin-top: -10px;
+  margin-left: -8px;
+}
+
+#sauce {
+  padding: 5px;
+  border: 1px solid black;
+}
+
+.main2 {
+  margin-bottom: 40px;
+}
+
+#submit_btn {
+  background-color: red;
+  padding: 15px;
+  border-radius: 10px;
+  color: white;
+  font-size: 20px;
 }
 
 input {
-  padding: 5px;
+  padding: 10px;
 }
